force-app/main/default/objects/N_S_cio_Seria_o__c/N_S_cio_Seria_o__c.object-meta.xml
<CustomObject>
    <label>Nº Sócio - Seriação</label>
    <nameField>
        <label>Nome de ASDDSA</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nº Sócio - Seriações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>