force-app/main/default/objects/N_S_cio_Seria_o__c/fields/Tipo_de_S_cio__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_S_cio__c</fullName>
    <label>Tipo de Sócio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Efetivos</fullName>
            </value>
            <value>
                <fullName>Cooperante</fullName>
                <label>Cooperante pessoa singular</label>
            </value>
            <value>
                <fullName>Cooperante pessoa coletiva</fullName>
            </value>
            <value>
                <fullName>Honorários</fullName>
                <label>Honorário</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>