force-app/main/default/objects/N_S_cio_Seria_o__c/fields/ultimo_n_mero__c.field-meta.xml
<CustomField>
    <fullName>ultimo_n_mero__c</fullName>
    <label>ultimo número</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>