force-app/main/default/objects/N_S_cio_Seria_o__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tipo_de_S_cio__c</columns>
    <columns>Letra__c</columns>
    <columns>ultimo_n_mero__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
    <language>en_US</language>
</ListView>